Bug fixes, changes - Broke IndivItemConfig.java into different classes - Changed truth and christmas rarity colors - Changed truth rarity name - Added event rarity  - Birthday boar moved to event rarity - Changed page inputs to integer only - Powerup usage now floors to whatever user has - Fixed bug where exception would occur when viewing compendium with filter that results in no boars being shown - Fixed interactives not sending in some cases if bot doesn't have view channel perms - Changed rarities to show based on a tag in config - Select menu now shows up no matter what with item interactives - Fixed mega menu blocking thread until item interactive sent - Fixed cloning yielding wrong number of boars - Fixed interact select menu staying open in compendium on non-owned boars - Filter and Sort button are now green if non-default - Blacklisted boars no longer show up in collection/compendium - Fixed favorite boar not showing up in profile - Fixed searching in compendium yielding an error if search does not match a boar